Review Request 17214 fix log4j