@@ -19,9 +19,16 @@ fi
 if [[ ! -z $(java -version 2>&1 |  grep "11.0") ]]; then
     echo "Java version: $(java -version 2>&1), enabling ZGC"
     export JAVA_TOOL_OPTIONS="${JAVA_TOOL_OPTIONS} -XX:+UnlockExperimentalVMOptions -XX:+UseZGC -Xlog:gc:/var/log/ledp/gc.log"
+else
+    echo "Java version: $(java -version 2>&1), enabling G1GC"
+    export JAVA_TOOL_OPTIONS="${JAVA_TOOL_OPTIONS} -XX:+UseG1GC -XX:+PrintGCTimeStamps -Xloggc:/var/log/ledp/gc.log"
 fi
 
-export JAVA_OPTS="-Xmx4g -XX:ReservedCodeCacheSize=1g"
+if [[ -f "/var/log/ledp/gc.log" ]]; then
+    rm /var/log/ledp/gc.log*
+fi
+
+export JAVA_OPTS="-Xmx4g -Xms2g -XX:ReservedCodeCacheSize=1g"
 export JAVA_OPTS="${JAVA_OPTS} -Djava.net.preferIPv4Stack=true"
 export JAVA_OPTS="${JAVA_OPTS} -Xdebug -Xnoagent -Djava.compiler=NONE -Xrunjdwp:transport=dt_socket,address=4001,server=y,suspend=n"
 export JAVA_OPTS="${JAVA_OPTS} -Dsqoop.throwOnError=true"
